plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        name = 'AsposeJavaAPI'
        url = 'https://repository.aspose.com/repo/'
    }
    maven {
        name = 'e-iceblue'
        url = 'https://repo.e-iceblue.com/nexus/content/groups/public/'
    }
}
configurations.all {
    exclude group: 'org.slf4j', module: 'slf4j-reload4j'
}


dependencies {
    implementation 'org.telegram:telegrambots:6.9.7.1'

    implementation 'org.slf4j:slf4j-api:2.0.7'

    implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2'
    implementation 'org.apache.poi:poi:4.1.1'
    implementation 'org.apache.poi:poi-ooxml:4.1.1'
    implementation 'org.apache.poi:poi-scratchpad:4.1.1'
    implementation 'com.itextpdf:itextpdf:5.5.13.2'

    implementation 'org.apache.pdfbox:pdfbox:2.0.27'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--add-modules', 'ALL-MODULE-PATH']
}

tasks.named('test') {
    useJUnitPlatform()
}
